--- a/src/main/resources/assets/elevator/lang/en_us.json
+++ b/src/main/resources/assets/elevator/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "block.elevator.elevator_block": "Elevator",
-  "elevator:teleport": "Elevator teleport"
+  "elevator:teleport": "Elevator teleport",
+  "text.autoconfig.elevator.title": "Elevator",
+  "text.autoconfig.elevator.option.elevatorDistance": "Elevator Teleport Distance"
 }
